# cloud_cost_optimization

./: .env  .env.example  .gitignore  PHASE_2_SUMMARY.md  QUICK_START_PHASE2.md  alembic.ini  celery_worker.py  cloudteck.db  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
.venv_old_20260526/: pyvenv.cfg
adr/: 001-why-mysql-over-postgres.md  README.md
alembic/: env.py
alembic/versions/: 001_initial_auth.py  002_core_business_tables.py  b001_finops_rec_hash.py  b002_recommendations_dataset.py  b003_finops_tiering_engine.py
app_legacy/: __init__.py  cli.py  dependencies.py  main.py
app_legacy/api/: __init__.py  router.py  schemas.py  state.py
app_legacy/collectors/: __init__.py  access_logs.py  event_driven.py  ingestion_service.py  inventory_batch.py  models.py
app_legacy/core/: config.py  constants.py  database.py  error_handlers.py  exceptions.py  logging.py  monitoring.py  redis.py  security.py
app_legacy/dashboards/: __init__.py  schemas.py  service.py
app_legacy/decision_engine/: __init__.py  engine.py  models.py  types.py
app_legacy/feature_engineering/: __init__.py  extractor.py  models.py
app_legacy/migration_engine/: __init__.py  audit.py  (+2 more)
backend/: .env  .env.example  README.md  __init__.py  requirements.txt
docker/: app.Dockerfile  nginx.Dockerfile  nginx.conf  nginx.prod.conf  prometheus.yml
docs/: api_saas_platform_architecture.md  costintel_enterprise_enhancements.md  costintel_enterprise_implementation_report.md  deployment.md  enterprise_bucket_billing_confidence_upgrade.md  enterprise_execution_backlog.md  finops_decision_hardening_spec.md  finops_dry_run_authority_technical_spec.md  finops_execution_artifacts.md  iam_readonly_mapping.md  multi_cloud_storage_optimization.md  pricing_ingestion_versioning.md
frontend/: package-lock.json  package.json  technical_overview.md
scripts/: backup.sh  deploy_onboard_new_resources.py
uploads/: 240846dc7f2740c18154f46a356ae75a_storage_events_real_world.json  2b5ea05b7d8f4016bf4eeadd89cd46f4_missing_latency_sample.json  3887f32e75264c29abb3cc4309259df7_a.json  463ed8c1cc554b449cf8fb10f4c9a1ed_synthetic_events_1000_with_objects.json  4bbbce3e67914421806ae1d016da682e_a.json  52af84b008f047cbbc0d5c0d22b2d133_a.json  5611cff371b04e7b84c4d9c70a1d7447_low_confidence_upload.json  5c5b37f3c13541688347089e77d57a18_a.json  67e6e68878cc4e13a91573bf3716a7ad_borderline_confidence_upload.json  6bb194a6d48243e4b9500f9f51790574_cloud_telemetry_50_50_50.json  8c11a750104549dbae316915133f922c_medium_confidence_upload.json  a14c579bcb0e41ad99e3fc5d43a2c24e_synthetic_inventory_60.json  b088ef6353154bdfaea9fddc59724270_client_metadata_only.json  b38965541da443689a0f61d1e9490947_storage_events_60.json  ca01d5080a41432a8f28be32dca690f5_storage_events_60.json  ca4ace52874a44e4a5132e39f67e1893_pricing_upload_2.json  d0d78b38dc1b4227bc6e2c85325b1cc1_pricing_upload.json  de77f0704121455da83d315f19d6f299_valid.json  eea54c348d0140169e1189b6b60954cc_storage_events_real_world.json  f6bfa78e46724e87adf4b2d60fcb3d9a_valid.json
(+207 files in other folders)
